refactor: replace singly LinkedList with Doubly LinkedList in Main class